# filtering_csv_test_fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  chat_history.db  compose.override.dev.yaml  main.py  pyproject.toml  requirements.txt
dataset/: preprocess.py
model/: chat.py  database.py  qdrant_data_insertion.py
parsing_scripts/: dou_parse.py
static/: styles.css
templates/: base.html  chat.html  create_room.html  index.html  vacancies.html
utils/: data_operations.py  db_operations.py  utils.py
